force-app/main/default/objects/Service_Order__c/Service_Order__c.object-meta.xml
<CustomObject>
    <label>Service Order</label>
    <pluralLabel>Service Orders</pluralLabel>
    <description
  >The fulfillment record for a request to add, change, or cancel a customer's managed services. Drives the provisioning process from submission through activation.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Service Order Number</label>
        <type>AutoNumber</type>
        <displayFormat>SO-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>