force-app/main/default/objects/Service_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Orders</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The customer account this service order was submitted for.</description>
</CustomField>