force-app/main/default/objects/Service_Order__c/fields/Network_Site__c.field-meta.xml
<CustomField>
    <fullName>Network_Site__c</fullName>
    <label>Network Site</label>
    <type>Lookup</type>
    <referenceTo>Network_Site__c</referenceTo>
    <relationshipLabel>Service Orders</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The site this order will provision service at. Not required at submission, but enforced by validation rule before the order can move into the Provisioning stage.</description>
</CustomField>