force-app/main/default/objects/Service_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Orders</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The originating sales opportunity, when this order resulted from a closed-won deal.</description>
</CustomField>