force-app/main/default/objects/Service_Order__c/recordTypes/Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Cancellation</fullName>
    <label>Cancellation</label>
    <active>true</active>
    <description
  >An order to decommission and end an existing service subscription.</description>
</RecordType>