force-app/main/default/objects/Service_Order__c/recordTypes/New_Service.recordType-meta.xml
<RecordType>
    <fullName>New_Service</fullName>
    <label>New Service</label>
    <active>true</active>
    <description
  >A first-time service order for a customer at a given network site.</description>
</RecordType>