force-app/main/default/objects/Service_Order__c/recordTypes/Upgrade.recordType-meta.xml
<RecordType>
    <fullName>Upgrade</fullName>
    <label>Upgrade</label>
    <active>true</active>
    <description
  >A change order that modifies an existing service subscription (e.g. bandwidth increase, added line).</description>
</RecordType>