force-app/main/default/objects/Service_Order__c/validationRules/Require_Network_Site_For_Provisioning.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Network_Site_For_Provisioning</fullName>
    <active>true</active>
    <description
  >An order cannot move into Provisioning until a site is known to provision service at.</description>
    <errorConditionFormula
  >AND(ISPICKVAL(Stage__c, &quot;Provisioning&quot;), ISBLANK(Network_Site__c))</errorConditionFormula>
    <errorMessage
  >A Network Site is required before this order can move to Provisioning.</errorMessage>
    <errorDisplayField>Network_Site__c</errorDisplayField>
</ValidationRule>